# budgie-hostname-applet

./: README.md
src/: Applet.vala  AppletSettings.vala  BudgieHostnameApplet.plugin  com.github.akiramiyakoda.budgie-hostname-applet.gschema.xml  meson.build
